kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-ticker
  namespace: stock-ticker
spec:
  selector:
    app.kubernetes.io/name: stock-ticker
  ports:
    - name: http
      port: 80
      targetPort: http
